<resources>
    <string name="app_name">Chop Well</string>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="sign_in">Sign In</string>
    <string name="start_onboarding_text">START</string>
    <string name="next_onboarding_text">NEXT</string>
    <string name="prev_onboarding_text">PREV</string>
    <string name="indicator_image_description">Indicator Image</string>
    <string name="first_onboarding_text">Have access to various Nigerian meals</string>
    <string name="second_onboarding_text">See how they are prepared</string>
    <string name="third_onboarding_text">Prepare Nigerian meals and enjoy with friends and family</string>
    <string-array name="category">
        <item>Beverages</item>
        <item>Breakfast</item>
        <item>Entrees</item>
        <item>Meat</item>
        <item>Puddings</item>
        <item>Side Dishes</item>
        <item>Snacks</item>
        <item>Soups and Stews</item>
    </string-array>
    <string name="title_auth">Authentication</string>
    <string name="text_sign_in_with_google">Sign in with Google</string>
    <string name="text_intro_text">Enjoy Nigerian Delicacies the way it\'s meant to be…</string>
    <string name="text_skip">SKIP</string>
    <string name="desc_main_image">Main background image</string>
    <string name="desc_translucent_cover">Translucent cover for background</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
</resources>
