<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.auth.AuthenticationFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/google_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/skip_signIn"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/text_sign_in_with_google"
        android:textAllCaps="false"
        android:textAppearance="@style/MainText"
        android:textSize="16sp"
        app:backgroundTint="@color/colorPrimary"
        app:icon="@drawable/ic_icons8_google" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/desc_main_image"
        android:scaleType="centerCrop"
        android:src="@drawable/chopwell_background" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/desc_translucent_cover"
        android:src="@drawable/translucent_background" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/autour_one"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="52sp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/autour_one"
        android:text="@string/text_intro_text"
        android:textAlignment="center"
        android:textColor="@color/gray900"
        android:textSize="18sp"
        android:textStyle="italic" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/skip_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="8dp"
        android:text="@string/text_skip"
        app:backgroundTint="@android:color/transparent" />

</RelativeLayout>